--- a/style.css
+++ b/style.css
@@ -5,3 +5,10 @@ h2{
     color: green;
     background-color: wheat;
 }
+h3{
+    color:blue
+}
+h4:{
+    background-color: black;
+    color:white
+}
